--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Matataki Developer Portal</title>
+    <title>Matataki 开发者中心 - Developer Portal</title>
     <meta name="description" content="Developer Portal for Matataki Dapp and third party developer">
     <link rel="icon" type="image/png" href="./static/favicon.png"/>
   </head>
