网站图标消失之谜

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Matataki 开发者中心 - Developer Portal</title>
     <meta name="description" content="Developer Portal for Matataki Dapp and third party developer">
-    <link rel="icon" type="image/png" href="./static/favicon.png"/>
+    <link rel="icon" type="image/png" href="/static/favicon.png"/>
   </head>
   <body>
     <div id="app"></div>
